--- a/PasswordManager/Views/Records/Delete.cshtml
+++ b/PasswordManager/Views/Records/Delete.cshtml
@@ -1,7 +1,9 @@
-﻿@model PasswordManager.Models.Record
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model PasswordManager.Models.Record
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "_Layout";
 }
 
 <h1>Delete</h1>
