--- a/PasswordManager/Views/Records/Create.cshtml
+++ b/PasswordManager/Views/Records/Create.cshtml
@@ -1,7 +1,9 @@
-﻿@model PasswordManager.Models.Record
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model PasswordManager.Models.Record
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "_Layout";
 }
 
 <h1>Create</h1>
@@ -35,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Records" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
