--- a/PasswordManager/Views/Records/Details.cshtml
+++ b/PasswordManager/Views/Records/Details.cshtml
@@ -1,7 +1,9 @@
-﻿@model PasswordManager.Models.Record
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model PasswordManager.Models.Record
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "_Layout";
 }
 
 <h1>Details</h1>
@@ -32,5 +34,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Records" asp-action="Index">Back to List</a>
 </div>
