--- a/PasswordManager/Views/Records/Edit.cshtml
+++ b/PasswordManager/Views/Records/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model PasswordManager.Models.Record
+@model PasswordManager.Models.RecordForm
 
 @{
     ViewData["Title"] = "Edit";
