--- a/PasswordManager/Views/Users/Index.cshtml
+++ b/PasswordManager/Views/Users/Index.cshtml
@@ -1,13 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Index";
-    Layout = "_Layout";
+	ViewData["Title"] = "Index";
+	Layout = "_Layout";
 }
-<html>
-<head>
-
-</head>
-<body>
- <h1>This is user login page</h1>
-</body>
-
-</html>
+<div class="container">
+	<h1>This is user login page</h1>
+</div>
