--- a/PasswordManager/Views/Shared/_Layout.cshtml
+++ b/PasswordManager/Views/Shared/_Layout.cshtml
@@ -20,10 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Records" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
