--- a/PasswordManager/Views/Records/Create.cshtml
+++ b/PasswordManager/Views/Records/Create.cshtml
@@ -25,17 +25,26 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" id="pwd" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-
+            <script>
+                function generate() {
+                    password = Math.random().toString(36).slice(2) + Math.random().toString(36).slice(2);
+                    document.getElementById("pwd").setAttribute('value', password);
+                    return false;
+                }
+            </script>
 
             <div class="form-group">
+                <input type="button" value="Generate" class="btn btn-primary" onclick="generate()"/>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+
+
 
 <div>
     <a asp-controller="Records" asp-action="Index">Back to List</a>
