--- a/PasswordManager/Views/Shared/_Layout.cshtml
+++ b/PasswordManager/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Records" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="Records" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - PasswordManager - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - PasswordManager - <a asp-controller="Records" asp-action="About">About</a>
         </div>
     </footer>
 
