--- a/PasswordManager/Views/Users/Login.cshtml
+++ b/PasswordManager/Views/Users/Login.cshtml
@@ -4,10 +4,27 @@
 	ViewData["Title"] = "Login";
 	Layout = "_Layout";
 }
-<div class="container">
-	<form asp-controller="Users" asp-action="Login" method="POST">
-		<input asp-for="Username">
-		<input asp-for="Password" />
-		<input type="submit" value="Login" />
- </form>
+
+<h1>Login to Password Manager</h1>
+<hr />
+
+<div class="row">
+ <div class="col-md-4">
+
+  <form asp-controller="Users" asp-action="Login" method="POST">
+	 
+   <div class="form-group">
+	<label asp-for="Username" class="control-label"></label>
+	<input asp-for="Username" class="form-control">
+   </div>
+   <div class="form-group">
+	<label asp-for="Password" class="control-label"></label>
+	<input asp-for="Password" class="form-control" />
+   </div>
+   <div class="form-group">
+	<input type="submit" value="Login" class="btn btn-primary" />
+   </div>
+  </form>
+ </div>
 </div>
+<p><a asp-controller="Users" asp-action="Register">New users registration</a></p>
