--- a/PasswordManager/Views/Users/Register.cshtml
+++ b/PasswordManager/Views/Users/Register.cshtml
@@ -6,13 +6,31 @@
 	Layout = "_Layout";
 }
 
-<div class="container">
-	<form asp-controller="Users" asp-action="Register" method="POST">
-		<input asp-for="Username">
-		<input asp-for="Password" />
-		<input asp-for="ConfirmPassword" />
-		<input type="submit" value="Register" />
-	</form>
+<div>
+ <h1>New user registration</h1>
+ <hr />
+</div>
+
+<div class="row">
+ <div class="col-md-4">
+  <form asp-controller="Users" asp-action="Register" method="POST">
+   <div class="form-group">
+	<label asp-for="Username" class="control-label"></label>
+	<input asp-for="Username" class="form-control">
+   </div>
+   <div class="form-group">
+	<label asp-for="Password" class="control-label"></label>
+	<input asp-for="Password" class="form-control" />
+   </div>
+   <div class="form-group">
+	<label asp-for="ConfirmPassword" class="control-label">Confirm your password</label>
+	<input asp-for="ConfirmPassword" class="form-control" />
+   </div>
+   <div class="form-group">
+	<input type="submit" value="Register" class="btn btn-primary" />
+   </div>
+  </form>
+ </div>
 </div>
 
 
